<resources>
    <string name="app_name">Katy B Player</string>
    <string name="on_a_mission">On a Mission</string>
    <string name="little_red">Little Red</string>
    <string name="honey">Honey</string>
    <string name="playlists">Playlists</string>
    <string name="videos">Videos</string>
    <string name="whole_album">Whole album</string>
    <string name="choose_album_to_play">Choose album to play</string>
    <string name="play_album_or_songs">Play the whole album  \nor choose songs</string>
    <string name="next_thing">Next Thing</string>
    <string name="_5_am">5 AM</string>
    <string name="aaliyah">Aaliyah</string>
    <string name="crying_for_no_reason">Crying For No Reason</string>
    <string name="i_like_you">I Like You</string>
    <string name="all_my_lovin">All My Lovin</string>
    <string name="tumbling_down">Tumbling Down</string>
    <string name="everything">Everything</string>
    <string name="play">Play</string>
    <string name="sapphire_blue">Sapphire Blue</string>
    <string name="emotions">Emotions</string>
    <string name="still">Still</string>
    <string name="hard_to_get">Hard To Get</string>
    <string name="perfect_stranger">Perfect Stranger</string>
    <string name="power_on_me">Power On Me</string>
    <string name="katy_on_a_mission">Katy On a Mission</string>
    <string name="why_you_always_here">Why You Always Here</string>
    <string name="witches_brew">Witches Brew</string>
    <string name="movement">Movement</string>
    <string name="go_away">Go Away</string>
    <string name="disappear">Disappear</string>
    <string name="broken_record">Broken Record</string>
    <string name="lights_on">Lights On</string>
    <string name="easy_please_me">Easy Please Me</string>
    <string name="who_am_i">Who Am I</string>
    <string name="so_far_away">So Far Away</string>
    <string name="chase_me">Chase Me</string>
    <string name="lose_your_head">Lose Your Head</string>
    <string name="i_wanna_be">I Wanna Be</string>
    <string name="calm_down">Calm Down</string>
    <string name="heavy">Heavy</string>
    <string name="turn_the_music_louder">Turn The Music Louder</string>
    <string name="dark_delirium">Dark Delirium</string>
    <string name="water_rising">Water Rising</string>
    <string name="dreamerz">Dreamerz</string>
    <string name="honey_outro">Honey (Outro)</string>
    <string name="description_main">This is a start screen of Katy B Player, an app that plays Katy B albums. Here a user chooses LP they want to play. Tapping on LP Relative Layout redirects the user to another screen showing this particular album. </string>
    <string name="description_album">This is a screen for one of three Katy B albums. It contains a list of songs. The user can choose between listening to the whole album or to the songs of their choice. They can use play, pause and stop buttons for that. The app would have its own music files database and would use MediaPlayer class as it is the primary API for playing sound and video.</string>
</resources>
